GS-12401: Fixed DC photo's light box  top alignment for IE7.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1197,6 +1197,10 @@ body.ie8 .btsSupplyListsTag .arrow {
     z-index: 1002;
 }
 
+.ie7 #photo-gallery{
+    top: 10px;
+}
+
 #photo-gallery-schoolname {
     float: left;
     margin: 11px 0 10px 10px;
